# correspondence

./: .env.development  .env.testing  LICENSE  Makefile  Procfile  README.md  alembic.ini  conftest.py  hello.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  webpack.config.js
.github/workflows/: backend.yml
correspondence/: app.py  auth.py  broker.py  cache.py  cli.py  conf.py  deps.py  jwt.py  main.py  models.py  pagination.py  provider.py  resources.py  service.py  settings.py  utils.py
correspondence/api/: deps.py  endpoints.py  payloads.py  resources.py
correspondence/builtins/: extensions.py
correspondence/db/: deps.py  engine.py  mixins.py  models.py  sql.py
correspondence/middleware/: logging.py
correspondence/migrations/: env.py
correspondence/migrations/versions/: 2025-05-18_initial.py  2025-05-23_initial.py  2025-06-07_search_vector.py
correspondence/static/src/css/: main.scss
correspondence/static/src/js/: api.ts  app.js  app.tsx  atoms.ts  contexts.ts  types.ts
correspondence/static/src/js/components/: Avatar.js  Avatar.tsx  Modal.js  Modal.tsx
correspondence/static/src/js/hoc/: withFormikValidator.js  withFormikValidator.tsx
correspondence/static/src/js/icons/: SvgActiveCampaign.js  SvgActiveCampaign.tsx
correspondence/static/src/js/models/: ConversationModel.js  MessageModel.js
correspondence/static/src/js/utils/: config.js  requester.js  requester.ts  sanitize.js  sanitize.ts
correspondence/static/src/js/views/: Conversation.js  Conversation.tsx  ConversationContainer.js  ConversationContainer.tsx  ConversationItem.js  ConversationItem.tsx  ConversationList.js  ConversationList.tsx  ConversationProfile.js  ConversationProfile.tsx  ConversationWrapper.js  ConversationWrapper.tsx  Message.js  Message.tsx  MessageForm.js  MessageForm.tsx  Navbar.js  Navbar.tsx  Thread.js  Thread.tsx  ThreadContainer.js  ThreadContainer.tsx  UserCreate.tsx  UserForm.js  UserForm.tsx  UserList.js  UserList.tsx
correspondence/templates/: base.html  signin.html
correspondence/templates/organization/: detail.html
correspondence/test/: client.py  fixtures.py
correspondence/web/: automessage.py  endpoints.py  hooks.py  root.py
tests/: test_models.py
tests/api/: test_endpoints.py  test_endpoints.py.bak
tests/web/: test_automessage.py  test_endpoints.py  test_hooks.py  test_root.py
