[project]
name = "fast-correspondence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "psycopg>=3.2.9",
    "sqlalchemy>=2.0.41",
    "taskiq>=0.11.17",
    "taskiq-redis>=1.0.8",
    "typer>=0.15.4",
    "uvicorn>=0.34.2",
    "cacheout>=0.16.0",
    "pydantic>=2.11.4",
    "httpx>=0.28.1",
    "sqlalchemy-utils>=0.41.2",
    "structlog>=25.3.0",
    "pydantic-settings>=2.9.1",
    "uvloop>=0.21.0",
    "alembic>=1.15.2",
    "types-redis>=4.6.0.20241004",
    "greenlet>=3.2.2",
    "asgi-correlation-id>=4.3.4",
    "ddtrace>=3.7.0",
    "sqlalchemy-searchable>=2.1.0",
]

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "ipdb>=0.13.13",
    "ipython>=9.2.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.10",
]
