[project]
name = "fast-correspondence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "psycopg>=3.2.9",
    "sqlalchemy>=2.0.41",
    "taskiq>=0.11.17",
    "taskiq-redis>=1.0.9",
    "typer>=0.16.0",
    "uvicorn>=0.34.3",
    "cacheout>=0.16.0",
    "pydantic[email]>=2.11.5",
    "cryptography>=45.0.3",
    "httpx>=0.28.1",
    "sqlalchemy-utils>=0.41.2",
    "structlog>=25.4.0",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "uvloop>=0.21.0",
    "alembic>=1.16.1",
    "types-redis>=4.6.0.20241004",
    "greenlet>=3.2.2",
    "asgi-correlation-id>=4.3.4",
    "ddtrace>=3.9.1",
    "sqlalchemy-searchable",
    "pydantic-extra-types>=2.10.4",
    "pycountry>=24.6.1",
    "phonenumbers>=9.0.6",
    "bcrypt>=4.3.0",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.6",
    "babel>=2.17.0",
    "sentry-sdk>=2.29.1",
    "ipython>=9.3.0",
    "click>=8.2.1",
]

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "ipdb>=0.13.13",
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.12",
]

[[tool.mypy.overrides]]
module = ["sqlalchemy_utils.*", "cacheout.*", "sqlalchemy_searchable"]
follow_untyped_imports = true

[tool.uv.sources]
sqlalchemy-searchable = { git = "https://github.com/ulule/sqlalchemy-searchable.git", rev = "083738ef5ce457c24a99899fd801457c61ac7889" }
